git subrepo clone (merge) --force git://github.com/ajs/perl6-Math-Sequences.git ajs/perl6-Math-Sequences
subrepo:
  subdir:   "ajs/perl6-Math-Sequences"
  merged:   "17bfc36"
upstream:
  origin:   "git://github.com/ajs/perl6-Math-Sequences.git"
  branch:   "master"
  commit:   "17bfc36"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/ajs/perl6-Math-Sequences/.travis.yml
+++ b/ajs/perl6-Math-Sequences/.travis.yml
@@ -1,17 +1,13 @@
-language: perl6
+sudo: required
+
+language: c
+
+services:
+  - docker
 
 install:
+  - docker pull jjmerelo/test-perl6
+  - docker images
 
-  - rakudobrew build-panda
+script: docker run -t -v /home/travis/build/JJ/perl6-Math-Sequences:/test jjmerelo/test-perl6 
 
-  - panda installdeps .
-
-script:
-
-  - prove -v -e "perl6 --ll-exception -Ilib" t
-
-  - PANDA_SUBMIT_TESTREPORTS=1 panda install .
-
-after_success:
-
-  - panda list --installed --verbose
